# cloud-ids

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.example.yaml  loader.py
data/samples/: sample_flows.json
deployment/docker/: Dockerfile  docker-compose.yml  prometheus.yml
deployment/gcp/: setup.sh
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
features/: __init__.py  preprocessor.py
inference/api/: app.py
inference/serving/: __init__.py  model_registry.py  predictor.py
ingestion/: __init__.py  live_scanner.py  main.py  parsers.py  pubsub_consumer.py
models/autoencoder/: __init__.py  model.py
models/ensemble/: __init__.py  arbitration.py
models/lstm/: __init__.py  model.py
models/xgboost/: __init__.py  model.py
monitoring/: __init__.py  drift_detector.py  metrics.py
notebooks/: 01_exploratory_analysis.ipynb
retraining/: __init__.py  retrain_pipeline.py
scripts/: bootstrap_local_artifacts.py  cli.py  deploy_gke.sh  scan_live.py  smoke_test.py  train_all.py  upload_artifacts.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_ensemble.py  test_live_scanner.py  test_models.py  test_parsers.py
training/: __init__.py  dataset.py  metrics.py  train_autoencoder.py  train_lstm.py  train_xgboost.py
triage/: __init__.py  router.py
